<resources>
    <string name="app_name">HATCHERY</string>
    <string name="big_text">HATCHERY FISH INVENTORY SYSTEM</string>
    <string name="small_text">Flemming College - Frost Campus</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="tank_number">Tank Number :</string>
    <string name="species">Species :</string>
    <string name="group">Group :</string>
    <string name="entry_date">Entry Date :</string>
    <string name="last_sample_date">Last Sample Date :</string>
    <string name="inventory_number">Inventory Number :</string>
    <string name="avergae_weight">Average Weight(kg) :</string>
    <string name="bio_mass">Biomass(kg) :</string>
    <string name="source_tank">Source Tank :</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="tanks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="tanks_2">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="student_id">Student/Faculty ID :</string>
    <string name="email_id">Email ID :</string>
    <string name="college_email">College Email ID :</string>
    <string name="password_">Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="tank_details">Tank Details</string>
    <string name="opt1">Daily Oxygen &amp; Temp</string>
    <string name="opt2">Daily Feeding Data</string>
    <string name="opt3">Drug Treatment Record</string>
    <string name="opt4">Mortality Collection</string>
    <string name="opt6">ATU\'s</string>
    <string name="opt5">Transfer &amp; Grading</string>
    <string name="opt7">Weight Sample</string>
    <string name="opt8">Checklist</string>
    <string name="opt9">Status</string>
    <string name="opt10">Deliveries</string>
    <string name="eod_chkl_opt1">All standpipes in place and secure</string>
    <string name="eod_chkl_opt2">All tank levels good</string>
    <string name="eod_chkl_opt3">Flows good, inflows set correctly</string>
    <string name="eod_chkl_opt4">Air stones active</string>
    <string name="eod_chkl_opt5">Feeders set, belts working</string>
    <string name="eod_chkl_opt6">O2 receiver pressure OK</string>
    <string name="eod_chkl_opt7">Waste sumps in auto</string>
    <string name="eod_chkl_opt8">All pumps running</string>
    <string name="eod_chkl_opt9">Incubators checked</string>
    <string name="eod_chkl_opt10">Filter cloths checked</string>
    <string name="eod_chkl_opt11">Backup O2 cylinders</string>
    <string name="eod_chkl_opt12">Bio trench water level OK</string>
    <string name="eod_chkl_opt13">Safety check</string>
    <string name="oxy_temp">Oxygen &amp; Temperature</string>
    <string name="ot_opt1">Outside Air Temp</string>
    <string name="ot_opt2">Hatchery Air Temp</string>
    <string name="ot_opt3">Tank Temp</string>
    <string name="ot_opt4">Dissolved Oxygen(mg/DL)</string>
    <string name="ot_opt4_key">Dissolved Oxygen(mgDL)</string>
    <string name="ot_opt5">% Saturation Oxygen</string>
    <string name="ot_opt6">Pre-Backwash flow(L/min)</string>
    <string name="ot_opt6_key">Pre-Backwash flow(Lmin)</string>
    <string name="ot_opt7">Post-Backwash Flow</string>
    <string name="ot_opt8">Adjustments</string>
    <string name="mc_type1">POOR PERFORMER</string>
    <string name="mc_type2">FUNGUS</string>
    <string name="mc_type3">NON CODEABLE</string>
    <string name="mc_type4">FRESHMORT</string>
    <string name="mc_type5">VACCINATION</string>
    <string name="mc_type6">HUMAN ERROR</string>
    <string name="mc_type7">JUMPERS</string>
    <string name="mc_type8">DEFORMITY</string>
    <string name="mc_type9">LEATHEL SAMPLING</string>
    <string name="mc_type10">EYE PECK</string>
    <string name="mc_type11">PREDATORS</string>
    <string name="mc_type12">SYSTEM</string>
    <string name="mc_type13">DISEASE</string>
    <string name="mc_type14">TRANSPORT</string>
    <string name="mc_type15">HANDLING</string>
    <string name="mc_type16">CULLED</string>
    <string name="mc_type_code_1">PP</string>
    <string name="mc_type_code_2">FU</string>
    <string name="mc_type_code_3">NC</string>
    <string name="mc_type_code_4">FR</string>
    <string name="mc_type_code_5">VC</string>
    <string name="mc_type_code_6">HE</string>
    <string name="mc_type_code_7">J</string>
    <string name="mc_type_code_8">DF</string>
    <string name="mc_type_code_9">LS</string>
    <string name="mc_type_code_10">EP</string>
    <string name="mc_type_code_11">PR</string>
    <string name="mc_type_code_12">SYS</string>
    <string name="mc_type_code_13">DI</string>
    <string name="mc_type_code_14">TR</string>
    <string name="mc_type_code_15">H</string>
    <string name="mc_type_code_16">CU</string>
    <string name="dtr_opt1">Initials</string>
    <string name="dtr_opt2">Date</string>
    <string name="dtr_opt3">Treatment Product</string>
    <string name="dtr_opt4">Treatment Style</string>
    <string name="dtr_opt5">Concentration</string>
    <string name="dtr_opt6">Amount Used(ml or g)</string>
    <string name="dtr_opt7">Drug Lot Number</string>
    <string name="dtr_opt8">Start Time</string>
    <string name="dtr_opt9">End Time</string>
    <string name="dtr_opt10">Notes</string>
    <string-array name="treatment_products">
        <item>Salt</item>
        <item>Peroxide (H2O2)</item>
        <item>Chloramine T</item>
        <item>Parasite S</item>
        <item>MS-222</item>
        <item>Clove Oil</item>
    </string-array>
    <string-array name="treatment_style">
        <item>Bath</item>
        <item>Shock and Drip</item>
        <item>Drip</item>
    </string-array>
    <string name="mrng_chklist_opt1">Lights on</string>
    <string name="mrng_chklist_opt2">Safety Check</string>
    <string name="mrng_chklist_opt3">Pump Sets Running- </string>
    <string name="mrng_chklist_opt3_1">1-6</string>
    <string name="mrng_chklist_opt3_2">7-18</string>
    <string name="mrng_chklist_opt3_3">Incubation</string>
    <string name="mrng_chklist_opt_acp">Air compresser hours</string>
    <string name="mrng_chklist_opt4">Blow off Moisture From air receiver</string>
    <string name="mrng_chklist_opt5">O2 generator -</string>
    <string name="mrng_chklist_opt5_1">Receiver Tank PSI</string>
    <string name="mrng_chklist_opt5_2">Airsep feed pressure PSI</string>
    <string name="mrng_chklist_opt6">Well flow</string>
    <string name="mrng_chklist_opt7">Blower on degasser</string>
    <string name="mrng_chklist_opt8">Iron Trench water level</string>
    <string name="mrng_chklist_opt9">Bio Trench Water level</string>
    <string name="mrng_chklist_opt10">Waste Sump level</string>
    <string name="mrng_chklist_opt11">Bio filter bed moving</string>
    <string name="mrng_chklist_opt12">Blowers running</string>
    <string name="mrng_chklist_opt13">Drum filter working</string>
    <string name="mrng_chklist_opt14">UVs running</string>
    <string name="mrng_chklist_opt15">Visual on tank flows</string>
    <string name="mrng_chklist_opt16">Visual on fish behaviour</string>
    <string name="mrng_chklist_opt17">Feeders fed out-record non functioning</string>
    <string name="mrng_chklist_opt18">Footbath disinfectant topped up</string>
    <string name="mrng_chklist_opt19">Incubator flow checked</string>
    <string name="mrng_chklist_opt20">Boiler running, thermostat on</string>
    <string name="tg_initials">Initials</string>
    <string name="tg_team_members">Team Members</string>
    <string name="tg_date">Date</string>
    <string name="tg_temp">Temperature</string>
    <string name="tg_source_tank">Source Tank</string>
    <string name="tg_source_tank_inv">Source Tank Inventory</string>
    <string name="tg_source_tank_avg_wt">Source Tank Average Weight</string>
    <string name="tg_source_tank_biomass">Source Tan Biomassk</string>
    <string name="tg_top_tank">Top Level Tank</string>
    <string name="tg_top_tank_inv">Top Level Tank Inventory</string>
    <string name="tg_top_tank_avg_wt">Top Level Average Weight</string>
    <string name="tg_top_tank_biomass">Top Level Biomass</string>
    <string name="tg_mid_tank">Mid Level Tank</string>
    <string name="tg_mid_tank_inv">Mid Level Tank Inventory</string>
    <string name="tg_mid_tank_avg_wt">Mid Level Average Weight</string>
    <string name="tg_mid_tank_biomass">Mid Level Biomass</string>
    <string name="tg_bottom_tank">Bottom Level Tank</string>
    <string name="tg_bottom_tank_inv">Bottom Level Tank Inventory</string>
    <string name="tg_bottom_tank_avg_wt">Bottom Level Average Weight</string>
    <string name="tg_bottom_tank_biomass">Bottom Level Biomass</string>
    <string name="tg_culled_number">Culled Fish</string>
    <string name="tg_culled_avg_wt">Culled Average Weight</string>
    <string name="tg_culled_biomass">Culled Biomass</string>
    <string name="tg_final_inv">Final Inventory</string>
    <string name="tg_final_graded">Final Graded</string>
    <string name="tg_final_culled">Final Culled</string>
    <string name="tg_final_plus_minus">Final Plus Minus</string>
    <string name="tg_comments">Comments</string>
    <string name="w_initials">Initials</string>
    <string name="w_team_members">Team Members</string>
    <string name="w_date">Date</string>
    <string name="w_comments">Comments</string>
    <string name="r1_sw">R1_SW</string>
    <string name="r1_num">R1_Number</string>
    <string name="r1_gm">R1_gms</string>
    <string name="r1_kg">R1_kg</string>
    <string name="r2_sw">R2_SW</string>
    <string name="r2_num">R2_Number</string>
    <string name="r2_gm">R2_gms</string>
    <string name="r2_kg">R2_kg</string>
    <string name="r3_sw">R3_SW</string>
    <string name="r3_num">R3_Number</string>
    <string name="r3_gm">R3_gms</string>
    <string name="r3_kg">R3_kg</string>
    <string name="r4_sw">R4_SW</string>
    <string name="r4_num">R4_Number</string>
    <string name="r4_gm">R4_gms</string>
    <string name="r4_kg">R4_kg</string>
    <string name="r5_sw">R5_SW</string>
    <string name="r5_num">R5_Number</string>
    <string name="r5_gm">R5_gms</string>
    <string name="r5_kg">R5_kg</string>
    <string name="tt_sample_wt">Total Sample Weight</string>
    <string name="tt_no_of_fish">Total Number of Fish</string>
    <string name="tt_avg_wt">Total Avg Weight</string>
    <string name="tt_biomass">Total_biomass</string>
    <string name="egg_initials">egg_initials</string>
    <string name="egg_date">egg_date</string>
    <string name="egg_species">egg_species</string>
    <string name="egg_source">egg_source</string>
    <string name="egg_farm_inv">egg_farm_inv</string>
    <string name="egg_lot_num">egg_lot_num</string>
    <string name="egg_avg_eggs">egg_avg_eggs</string>
    <string name="egg_avg_eggpl">egg_avg_eggpl</string>
    <string name="egg_avg_diameter">egg_avg_diameter</string>
    <string name="egg_r1_eggs">egg_r1_eggs</string>
</resources>