<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.11"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="left|center"
                android:paddingLeft="@dimen/dp_5"
                android:text="Home"
                android:textColor="@color/colorWhite"
                android:textSize="22dp" />



            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/ic_aquarium"></ImageView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_10"
        android:layout_weight="0.1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="left|center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:text="Select Tank"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            style="@style/SpinnerTheme"
            android:entries="@array/tanks"
            android:text="Select Tank"/>
    </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.15">
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/opt9"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_blue_round"/>
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.75">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt1"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/shape_blue_round"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt2"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/shape_blue_round"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt3"

                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/shape_blue_round"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt4"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/shape_blue_round"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt5"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/shape_blue_round"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt6"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/shape_blue_round"
                android:id="@+id/btn_atu"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt7"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/shape_blue_round"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:text="@string/opt8"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:id="@+id/checklist"
                android:background="@drawable/shape_blue_round"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>