<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_bg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_text"
                android:textColor="@color/blue"
                android:textSize="35dp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_centerInParent="true"
                android:id="@+id/big_text"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_text"
                android:layout_alignParentTop="true"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:layout_centerInParent="true"
                android:id="@+id/small_text"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_aquarium"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edittext_login"
                android:hint="@string/username"
                android:textColor="@color/blue"
                android:layout_centerInParent="true"
                android:textColorHint="@color/blue"
                android:gravity="center"
                android:id="@+id/username"
                android:paddingLeft="@dimen/dp_10"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edittext_login"
                android:hint="@string/password"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:paddingLeft="@dimen/dp_10"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Forgot Password?"
                android:textColor="@color/blue"
                android:gravity="right|center"
                android:onClick="forgotPassword"
                android:textSize="@dimen/dp_18"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <Button
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:text="@string/login"
                android:background="@drawable/shape_blue_round"
                android:textColor="@color/colorWhite"
                android:layout_centerInParent="true"
                android:onClick="login"
                android:textSize="@dimen/dp_18"
               />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="New User? Sign up here"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:onClick="signup"

                    android:textSize="@dimen/dp_18"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>